modprobe@nct6775.service

--- a/services/hdd-init.service
+++ b/services/hdd-init.service
@@ -1,6 +1,8 @@
 [Unit]
 Description=set high speed fan
 Before=hddtemp.service
+Requires=modprobe@nct6775.service
+After=modprobe@nct6775.service
 
 [Install]
 WantedBy=basic.target
